--- a/basicwebstuff/index.html
+++ b/basicwebstuff/index.html
@@ -6,7 +6,15 @@
 </head>
 
 <body>
-    <h1 style="position: relative; text-align: center;"> Hello Odin Project! </h1>
+    <h1 style="position:relative; text-align:center; border:3px solid; margin:auto; width:50%"> Hello Odin Project! </h1>
     <p style="color:rgb(0, 94, 16)">We got a long way to go</p>
+
+    <b>
+    <ul>
+        <li> Wow </li>
+        <li> Cool</li>
+        <li> Incredible </li>
+    </ul>
+    </b>
 </body>
 </html>
