--- a/basicwebstuff/index.html
+++ b/basicwebstuff/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Odin and Wauce</title>
+    <style>
+        @keyframes redtoblue {
+        0% {background-color: rgb(194, 48, 48);}
+        50% {background-color: rgb(26, 159, 204);}
+        100% {background-color: rgb(194, 48, 48);}
+        }
+    </style>
 </head>
 
 <body>
@@ -16,5 +23,9 @@
         <li> Incredible </li>
     </ul>
     </b>
+
+    <p style="position:relative; animation:redtoblue; animation-duration:2s; animation-iteration-count:infinite; width:50%; height:20%; margin:auto">
+        Check me out!
+    </p>
 </body>
 </html>
