add an example comment

--- a/basicwebstuff/index.html
+++ b/basicwebstuff/index.html
@@ -24,6 +24,8 @@
     </ul>
     </b>
 
+    <!-- Check me out I'm a comment! -->
+
     <p style="position:relative; animation:redtoblue; animation-duration:2s; animation-iteration-count:infinite; width:50%; height:20%; margin:auto">
         Check me out!
     </p>
