--- a/basicwebstuff/index.html
+++ b/basicwebstuff/index.html
@@ -25,9 +25,11 @@
     </b>
 
     <!-- Check me out I'm a comment! -->
-
+    
     <p style="position:relative; animation:redtoblue; animation-duration:2s; animation-iteration-count:infinite; width:50%; height:20%; margin:auto">
         Check me out!
     </p>
+    
+    <div><em>Emphasized Text</em> and <strong>Strong Text</strong></div>
 </body>
 </html>
