--- a/basicwebstuff/index.html
+++ b/basicwebstuff/index.html
@@ -3,33 +3,32 @@
 <head>
     <meta charset="utf-8">
     <title>Odin and Wauce</title>
-    <style>
-        @keyframes redtoblue {
-        0% {background-color: rgb(194, 48, 48);}
-        50% {background-color: rgb(26, 159, 204);}
-        100% {background-color: rgb(194, 48, 48);}
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 style="position:relative; text-align:center; border:3px solid; margin:auto; width:50%"> Hello Odin Project! </h1>
-    <p style="color:rgb(0, 94, 16)">We got a long way to go</p>
-
-    <b>
-    <ul>
-        <li> Wow </li>
-        <li> Cool</li>
-        <li> Incredible </li>
-    </ul>
-    </b>
-
-    <!-- Check me out I'm a comment! -->
-    
-    <p style="position:relative; animation:redtoblue; animation-duration:2s; animation-iteration-count:infinite; width:50%; height:20%; margin:auto">
-        Check me out!
-    </p>
-    
-    <div><em>Emphasized Text</em> and <strong>Strong Text</strong></div>
+    <div id="mainwrapper">
+        <h1> Hello Odin Project! </h1>
+        <p style="color:rgb(4, 0, 212); font-size: 18px; font-family: 'Comic Sans MS';">We got a long way to go</p>
+        <b>
+            <ul>
+                <li> Wow </li>
+                <li> Cool</li>
+                <li> Incredible </li>
+                <li> Lists are awesome! </li>
+            </ul>
+        </b>
+        <!-- Check me out I'm a comment! -->
+        <hr>
+        <div >
+            <p id="redtoblueanim">
+                Check me out!
+            </p>
+        </div>
+        <hr>
+        <div><em>Emphasized Text</em> and <strong>Strong Text</strong></div>
+        <hr>
+        <a href="secretpage.html">Check out the "Secret" page</a>
+    </div>
 </body>
 </html>
