Add extra animations to index and 'secret' page

--- a/basicwebstuff/index.html
+++ b/basicwebstuff/index.html
@@ -12,10 +12,11 @@
         <p style="color:rgb(4, 0, 212); font-size: 18px; font-family: 'Comic Sans MS';">We got a long way to go</p>
         <b>
             <ul>
-                <li> Wow </li>
-                <li> Cool</li>
-                <li> Incredible </li>
-                <li> Lists are awesome! </li>
+                <li class="slidein"> Wow </li>
+                <li class="slidein"> Cool </li>
+                <li class="slidein"> Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam </li>
+                <li class="slidein"> Incredible </li>
+                <li class="slidein"> Lists are awesome! </li>
             </ul>
         </b>
         <!-- Check me out I'm a comment! -->
