--- a/basicwebstuff/secretpage.html
+++ b/basicwebstuff/secretpage.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         adada
-        <a id="secretlink" href="https://www.youtube.com/watch?v=kDTuQQMATvo"><img src="smallfdmiyamoto.jpg" alt="well done"></a>
+        <a id="secretlink" href="https://www.youtube.com/watch?v=kDTuQQMATvo"><img class="fadein" src="smallfdmiyamoto.jpg" alt="well done"></a>
         <!-- <script src="" async defer></script> -->
     </body>
 </html>
